[package]
name = "daedalus-planner"
version = "2.0.0"
edition = "2024"
description = "Planner that validates and schedules Daedalus dataflow graphs."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-planner"
readme = "README.md"
keywords = ["dataflow", "graph", "planner"]
categories = ["algorithms"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
gpu = ["daedalus-gpu"]
proto = []
schema = []

[dependencies]
daedalus-data = { workspace = true }
daedalus-registry = { workspace = true }
daedalus-transport = { workspace = true }
daedalus-gpu = { workspace = true, optional = true }
daedalus-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
daedalus-data = { workspace = true }
