[package]
name = "daedalus-registry"
version = "2.0.0"
edition = "2024"
description = "Node registry and plugin bundle loader for Daedalus graphs."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-registry"
readme = "README.md"
keywords = ["dataflow", "registry", "plugins"]
categories = ["data-structures"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
bundle = []
plugin = []
gpu = ["daedalus-gpu"]

[dependencies]
daedalus-data = { workspace = true }
daedalus-gpu = { workspace = true, optional = true }
daedalus-core = { workspace = true }
daedalus-transport = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
once_cell = { workspace = true }
