[package]
name = "daedalus-runtime"
version = "1.0.0"
edition = "2024"
description = "Runtime executor for Daedalus plans with backpressure and plugins."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-runtime"
readme = "README.md"
keywords = ["runtime", "dataflow", "graph"]
categories = ["concurrency"]

[lib]
path = "src/lib.rs"

[features]
default = []
gpu = ["daedalus-gpu"]
gpu-mock = ["gpu", "daedalus-gpu/gpu-mock"]
executor-pool = ["rayon"]
lockfree-queues = ["crossbeam-queue"]
metrics = []
snapshots = []
ffi = []
plugins = []

[dependencies]
daedalus-planner = { path = "../planner" }
daedalus-registry = { path = "../registry" }
daedalus-gpu = { path = "../gpu", optional = true }
daedalus-data = { path = "../data" }
daedalus-core = { path = "../core" }
libc = "0.2"
crossbeam-queue = { workspace = true, optional = true }
serde = { workspace = true }
rayon = { workspace = true, optional = true }
smallvec = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true, optional = true }
futures-util = { workspace = true, default-features = false, features = ["std"] }
log = { workspace = true }
image = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
daedalus-registry = { path = "../registry" }
rand = { workspace = true }
