[package]
name = "daedalus-plugins-example-project"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = ["plugins"]
plugins = []

[dependencies]
daedalus = { version = "0.1.0", path = "../../crates/daedalus", package = "daedalus-rs", features = ["plugins"] }
paste = { workspace = true }
