[package]
name = "daedalus-plugins-math"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = ["plugins"]
gpu = ["daedalus/gpu"]
plugins = []

[dependencies]
daedalus = { workspace = true, features = ["plugins"] }
paste = { workspace = true }
