[package]
name = "daedalus-ffi-core"
version.workspace = true
edition.workspace = true
description = "Core FFI contracts, schemas, and package descriptors for Daedalus plugins."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-ffi-core"
readme = "README.md"
keywords = ["ffi", "plugins", "dataflow"]
categories = ["api-bindings"]

[lints]
workspace = true

[features]
default = []
image-payload = []

[dependencies]
daedalus-data = { workspace = true }
daedalus-transport = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
