[package]
name = "daedalus-ffi-cpp"
version.workspace = true
edition.workspace = true
description = "C and C++ FFI ABI and packaging integration for Daedalus plugins."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-ffi-cpp"
readme = "README.md"
keywords = ["ffi", "plugins", "cpp"]
categories = ["api-bindings"]

[lints]
workspace = true

[dependencies]
daedalus-ffi-core = { workspace = true }
daedalus-transport = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
daedalus-data = { workspace = true }
