[package]
name = "daedalus-ffi-java"
version.workspace = true
edition.workspace = true
description = "Java FFI worker and packaging integration for Daedalus plugins."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-ffi-java"
readme = "README.md"
keywords = ["ffi", "plugins", "java"]
categories = ["api-bindings"]

[lints]
workspace = true

[dependencies]
daedalus-ffi-core = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
