[package]
name = "daedalus-plugins-example-project"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[features]
default = ["plugins"]
plugins = []

[dependencies]
daedalus = { workspace = true, features = ["plugins"] }
paste = { workspace = true }
