[package]
name = "daedalus_rust_ffi_example"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = []
gpu-wgpu = ["daedalus/gpu-wgpu"]

[dependencies]
daedalus = { version = "1.0.0", path = "../../../daedalus", package = "daedalus-rs", features = ["plugins"] }
bytemuck = { version = "1", features = ["derive"] }
