[package]
name = "daedalus_rust_ffi_example"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = ["plugins"]
plugins = []
gpu-wgpu = ["plugins", "daedalus/gpu-wgpu"]

[dependencies]
daedalus = { workspace = true, features = ["plugins", "ffi"] }
bytemuck = { workspace = true }
paste = { workspace = true }
